@@ -1,0 +1,7 @@
+package com.buschmais.jqassistant.plugin.java.api.model;
+
+import com.buschmais.xo.neo4j.api.annotation.Label;
+
+@Label("Lambda")
+public interface LambdaMethodDescriptor extends MethodDescriptor {
+}
