@@ -325,20 +325,11 @@
     </concept>
 
     <concept id="java:LambdaMethod">
-        <description>Labels lambda methods with `Lambda` and creates a relation `DECLARES` from the declaring method.
-        </description>
+        <description>Creates a relation `DECLARES_LAMBDA` from the declaring method.</description>
+        <deprecated>The :Lambda label is now generated by the Java scanner, the `DECLARES_LAMBDA` relation adds very limited value. Therefore this concept will be removed.</deprecated>
         <cypher><![CDATA[
             MATCH
-              (type:Java:Type)-[:DECLARES]->(lambda:Method)
-            WHERE
-              exists(lambda.synthetic)
-              and exists(lambda.static)
-              and lambda.name starts with("lambda$")
-            SET
-              lambda:Lambda
-            WITH
-              type, lambda
-            MATCH
+              (type:Java:Type)-[:DECLARES]->(lambda:Lambda:Method),
               (type)-[:DECLARES]->(method:Method)
             WHERE
               method <> lambda
